--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.3.3"
+    "vite": "^2.3.3",
+    "vite-plugin-live-reload": "^2.1.0"
   }
 }
